edit icon link add

--- a/Plumberlist.html
+++ b/Plumberlist.html
@@ -262,7 +262,7 @@
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
                                   <li class="edit badge bg-info" style="cursor:pointer;" title="Approved">
-                                    <a href="#" class="text-white approved-btn">
+                                    <a href="Plumber-add.html" class="text-white">
                                       <i class="fa fa-pencil text-white"></i>
                                     </a>
                                   </li>
@@ -283,7 +283,7 @@
                               <td>09-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -297,7 +297,7 @@
                               <td>08-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -311,7 +311,7 @@
                               <td>07-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -325,7 +325,7 @@
                               <td>06-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -339,7 +339,7 @@
                               <td>05-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -353,7 +353,7 @@
                               <td>04-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -367,7 +367,7 @@
                               <td>03-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -381,7 +381,7 @@
                               <td>02-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -395,7 +395,7 @@
                               <td>01-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -409,7 +409,7 @@
                               <td>31-03-2025</td>
                               <td class="jsgrid-cell" style="width: 90px;">
                                 <ul class="action list-unstyled d-flex gap-2 mb-0">
-                                  <li class="edit badge bg-info" title="Approved"><a href="#" class="text-white approved-btn"><i class="fa fa-pencil text-white"></i></a></li>
+                                  <li class="edit badge bg-info" title="Approved"><a href="Plumber-add.html" class="text-white"><i class="fa fa-pencil text-white"></i></a></li>
                                   <li class="delete badge bg-danger" title="Delete"><a href="#" class="text-white"><i class="fa fa-trash-o text-white"></i></a></li>
                                 </ul>
                               </td>
@@ -437,21 +437,11 @@
             </footer>
       </div>
     </div>
-    <!-- Toast container -->
-            <div class="toast-container position-fixed top-0 end-0 p-3">
-              <div id="plumberToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="d-flex">
-                  <div class="toast-body">
-                    Plumber Approved successfully.
-                  </div>
-                  <button  type="button"  class="btn-close btn-close-white me-2 m-auto"  data-bs-dismiss="toast"  aria-label="Close"></button>
-                </div>
-              </div>
-            </div>
+
           
   <!-- // Select all approved buttons -->
       <script>
-  document.querySelectorAll('.approved-btn').forEach(btn => {
+  document.querySelectorAll('').forEach(btn => {
     btn.addEventListener('click', function(e) {
       e.preventDefault();
       // Show toast
